# protocore

./: Makefile
include/: core.h  core_apr.h  core_event.h  core_mqueue.h
libs/apr-1.5.2/: Makefile  apr-1-config  config.status  exports.c  libtool
libs/apr-1.5.2/.libs/: libapr-1.lai
libs/apr-1.5.2/include/arch/unix/: apr_private.h
libs/apr-1.5.2/test/: Makefile
libs/apr-1.5.2/test/internal/: Makefile
libs/apr-1.5.2/tools/: gen_test_char
libs/apr-util-1.5.4/: Makefile  apu-1-config  config.nice  config.status  exports.c
libs/apr-util-1.5.4/.libs/: libaprutil-1.lai
libs/apr-util-1.5.4/dbd/.libs/: apr_dbd_pgsql.lai
libs/apr-util-1.5.4/include/private/: apu_config.h
libs/apr-util-1.5.4/test/: #testqueue.c#  Makefile
libs/freeDiameter/: DartConfiguration.tcl
libs/freeDiameter/fDbuild/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
libs/freeDiameter/fDbuild/extensions/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/acl_wl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dbg_monitor/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dbg_msg_dumps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dbg_msg_timings/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dbg_rt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_dcca/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_dcca_3gpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_dcca_starent/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_eap/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_mip6a/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_mip6i/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_nas_mipv6/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_nasreq/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_rfc5777/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/dict_sip/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/rt_busypeers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/rt_change_dh/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/rt_default/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/rt_ignore_dh/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/rt_load_balance/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/extensions/rt_redirect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/freeDiameterd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/include/freeDiameter/: CTestTestfile.cmake  Makefile  cmake_install.cmake  freeDiameter-host.h
libs/freeDiameter/fDbuild/libfdcore/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/libfdproto/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/fDbuild/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/freeDiameter/tests/: testmesg.c
src/: core.c  core_apr.c  core_endpoint.c  core_event.c  core_module.c  core_trans.c  main.c
src/modules/cli/: Makefile  cli.c  cli.h
src/modules/diam-psm/: Makefile  Makefile.am  Makefile~  mod_diam_psm.c  mod_diam_psm.h  radius.c  radius.h
src/modules/radius/: radius.c  radius.h
src/modules/route-logic/: Makefile  Makefile.am  Makefile.in  diam.c  icscf.c  mod_route_logic.c  mod_route_logic.h  route_proxy.c
src/modules/route-logic/.deps/: mod_route_logic_la-icscf.Plo  mod_route_logic_la-mod_route_logic.Plo  mod_route_logic_la-route_proxy.Plo
src/modules/route-logic/.libs/: mod_route_logic.lai
src/modules/sip-tu/: Makefile  Makefile.am  Makefile.in  mod_sip_tu.c  mod_sip_tu.h
src/modules/sip-tu/.deps/: mod_sip_tu_la-mod_sip_tu.Plo
src/modules/sip-tu/.libs/: mod_sip_tu.lai
src/tests/: Makefile  test01.c
